
Fri Oct  1 18:59:58 PDT 1999
(Raster)

commented somehting out.. stil works.. ho hum.. dunno - expose bug cant be
reporduced right now :)

-------------------------------------------------------------------------------

Fri Oct  1 19:32:02 PDT 1999
(Mandrake)

fixed a warning in evhandlers.c
also, the TODO item is fixed.  Yay!  that was the last bug on the buglist.
snapshot coming out.

-------------------------------------------------------------------------------

Fri Oct  1 19:25:38 PDT 1999
(Raster)

remove raindrops fx from menu - still leaks shm segs like a seive. :)

-------------------------------------------------------------------------------

Fri Oct  1 19:44:55 PDT 1999
(Raster)

chaneg abotu text a little

-------------------------------------------------------------------------------

Sat Oct  2 11:59:40 PDT 1999
(Mandrake)

edited some documentation, also fixed a minor typo in menus.cfg

-------------------------------------------------------------------------------

Sat Oct  2 14:05:27 PDT 1999
(Mandrake)

having the logout dialog autoarrange looked kind of bad - so I have this one
centered again in session.c

-------------------------------------------------------------------------------

Sat Oct  2 16:08:43 PDT 1999
(Mandrake)

changed it to where the first dialog that pops up pops up centered, and
subsequent dialogs pop up in an auto-arranged format.

-------------------------------------------------------------------------------

Sat Oct  2 17:25:12 PDT 1999
(Raster)

several patches (group break if members of group of screen patch plue some
xmms behavior patches)
:)

-------------------------------------------------------------------------------

Sat Oct  2 17:27:31 PDT 1999
(Raster)


add dialog to explain pagers and iconboxes arent part of a group... :)

-------------------------------------------------------------------------------

Sat Oct  2 17:28:58 PDT 1999
(Raster)

damn.. fix that \" :)